docs(artifacts): Story 1.2 T8 finalize — status→review, gates-green record (AC9/AC10)
T8 finalization (no production code). Close out Story 1.2's tracking state:
- sprint-status.yaml: 1-2-smpp-3-4-codec in-progress → review; last_updated 2026-08-02.
- Story doc: Status → review; T8 task complete; T8 Dev Agent Record entry
  recording AC9 + AC10 evidence.

AC9 (purity + null-safety gates): CODEC-039 inward-only ArchUnit green and
load-bearing; CODEC-040 allowlist {io.netty, org.jspecify, org.projectlombok}
green; CODEC-041 buildSrc positive controls green; AD-35 NullAway@ERROR green on
compileJava + compileJmhJava; every codec sub-package carries @NullMarked
package-info.java; zero // FIXME markers in source.

AC10 (green build): ./gradlew clean build :buildSrc:test BUILD SUCCESSFUL on
Temurin 25 + --enable-preview; :codec:test 81/0/0/0; :buildSrc:test 17/0/0/0;
no test removed or @Disabled to make a gate pass.

Spec reconciliation #1 closed: bind_transceiver=0x09 independently confirmed
in-tree by CODEC-031 (jSMPP cross-oracle); the upstream planning-doc literal
(0x0F) remains a deferred edit (deferred-work.md).

Docs-only delta (no source since 49eb9a5); build state unchanged from the
recorded T7/T8 verification.

Co-Authored-By: Claude <noreply@anthropic.com>